--- a/css/notes.css
+++ b/css/notes.css
@@ -105,7 +105,7 @@
 	* width: 50%;
 	*/
 	margin: 0;
-	padding: 30px 20px 100px 30px;
+	padding: 1.5%;
 	font-size: 18px;
 	line-height: 1.5;
 	border: 0;
